@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The scheduler did not send common or history data to
+	  the client when processing a CUPS-Get-Default request
+	  (STR #559)
 	- The httpFlush() function did not always flush the
 	  remaining response data in requests (STR #558)
 	- The scheduler could complete a job before it collected
